test-01/app-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-01-app
  labels:
    name: test-app
spec:
  containers:
  - name: test-app
    image: amsy810/echo-nginx:v2.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
