test-01/deployment.yaml
apiVersion: apps/v1
kind: apiVersion: apps/v1
kind: Deployment
metadata:
  name:
spec:
  selector:
    matchLabels:
      app:

  template:
    metadata:
      labels:
        app:

    spec:
      containers:
      - name:

        image: <Image>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: <Port>
