test-01/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-01-ingress
  labels:
    name: test-01-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: test-01-nginx
            port:
              number: 10080
